--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            AcaciaLinux
+longtitle:        AcaciaLinux - Documentation
 author:           HE Tao
 email:            sighingnow@gmail.com
 description: >
@@ -8,10 +8,6 @@ description: >
 
 version:          1.0
 gitbook_version:  3.2.3
-
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
-rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
 remote_theme: sighingnow/jekyll-gitbook
@@ -36,12 +32,11 @@ kramdown:
   syntax_highlighter_opts:
     guess_lang:           true
 
-syntax_highlighter_style: colorful
+syntax_highlighter_style: gruvbox
 
 markdown_ext:             markdown,mkdown,mkdn,mkd,md
 
 # Permalinks
-permalink:                /:categories/:year-:month-:day-:title:output_ext
 
 # Disqus comments
 # disqushandler:            sighingnow
@@ -54,7 +49,7 @@ collections:
     output: true
     permalink: /:collection/:path/
 
-page_width: 80%
+page_width: 90%
 
 destination:      ./_site
 incremental:      false
